<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balance_robot_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for a self balancing robot.</description>

  <maintainer email="Johannes.Jeising@gmail.com">Johannes Jeising</maintainer>

  <license>Apache License 2.0</license>

  <author>Johannes Jeising</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
